hphp/test/slow/closure/no_properties_set.php.expectf
Fatal error: Closure object cannot have properties in %s/slow/closure/no_properties_set.php on line 7
